# simple-neural-network

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: matrix.h  network_training.h  neural_layer.h  neuron.h  neuron_network.h  random_generator.h
sources/: matrix.cpp  network_training.cpp  neural_layer.cpp  neuron_network.cpp  random_generator.cpp
